# ellcpp

./: ..travis.yml.un~  .clang-tidy  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis-old.yml  .travis.yml  .travis.yml~  CMakeLists-old  CMakeLists.txt  CTestConfig.cmake  Doxyfile  LICENSE  README.md  _collections_abc.h  chol_ext.hpp  cutting.hpp  cutting_plane.hpp  ell.hpp  envconfig.sh  environment-dev.yml  exp1d.cpp  ldlt.m  lmi_oracle.hpp  note.md  profit_main.cpp  profit_oracle.hpp  requirements.txt  sdp_oracle.hpp  tmptravis.yml
.github/workflows/: cmake-codecov.yml  cmake-debug.yml  cmake-release.yml  cmake.yml
.github/workflows-old/: cmake-release.yml
app/: CMakeLists.txt
app/src/: PgMain.cpp  example1_main.tpp  low_pass.tpp  main.cpp  profit_main.tpp
cmake/: CI.CTestScript.cmake  ConfigSafeGuards.cmake
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in
docs/: Makefile  conf.py  how_created.rst  index.rst  requirements.txt  using_intersphinx.rst
lib/: CMakeLists.txt  CMakeLists_header_only.txt
lib/bench/: BM_lmi.cpp  BM_lowpass.cpp  CMakeLists.txt  one_example.cpp
lib/include/: calc.h  chol_ext.hpp  cutting_plane.hpp  ell.hpp  lmi_oracle.hpp  lowpass_oracle.hpp  mat.hpp  profit_oracle.hpp  qmi_oracle.hpp  xnetwork.hpp
lib/include/ellcpp/: cut_config.hpp  cutting_plane.hpp  ell.hpp  ell1d.hpp  ell_assert.hpp  ell_stable.hpp  half_nonnegative.hpp  utility.hpp
lib/include/ellcpp/oracles/: chol_ext.hpp  cycle_ratio_oracle.hpp  fraction.hpp  ldlt_ext.hpp  lmi0_oracle.hpp  lmi_old_oracle.hpp  lmi_oracle.hpp  lowpass_oracle.hpp  min_cycle_ratio.h  min_cycle_ratio.hpp  min_cycle_ratio.py  neg_cycle.h  neg_cycle.hpp  network3_oracle.hpp  network_oracle.hpp  optscaling3_oracle.hpp  optscaling_oracle.hpp  parametric.h  parametric.hpp  profit_oracle.hpp  qmi_oracle.hpp  sdp_oracle.hpp  sdp_oracle.tpp
lib/include/ellip/: CMakeLists.txt  ellipsoid.cpp  ellipsoid.hpp  gp_solve.cpp  gp_solve.hpp  micp_test1.cpp  monomial.hpp  posynomial.hpp  profitmaxprob.cpp  profitmaxprob.hpp  profitmaxprob_2.cpp  rgp_yalaa.cpp
lib/include/netoptim/: min_cycle_ratio.hpp  neg_cycle.hpp  parametric.hpp
lib/include/py2cpp/: fractions.hpp  nx2bgl.hpp  py2cpp.hpp
lib/include/xnetwork/: exception.hpp
lib/include/xnetwork/classes/: coreviews.hpp  digraphs.hpp  graph.hpp  reportviews.hpp
lib/src/: calc.cpp  chol_ext.cpp  csd.cpp  ell.cpp  ell1d.cpp  ell_stable.cpp  ldlt_ext.cpp  lmi0_oracle.cpp  lmi_old_oracle.cpp  lmi_oracle.cpp  lowpass_oracle.cpp  lsq_corr_ell.cpp  profit_oracle.cpp  qmi_oracle.cpp  spectral_fact.cpp
lib/test/: CMakeLists.txt
lib/test/src/: calc_test.cpp  chol_test.cpp  corr_fn.tpp  corr_fn_ell.cpp  example1.cpp  example2.cpp  firfilter.cpp  ldlt_test.cpp  lmi_test.cpp  lowpass.cpp  main.cpp  test_boost.cpp  test_csd.cpp  test_cycle_ratio.cpp  test_cycle_ratio.h  test_cycle_ratio.tpp  test_cycle_ratio2.cpp  test_cycle_ratio_boost.cpp  test_example1.cpp  test_example2.cpp  test_lmi_old.cpp  test_main.cpp  test_neg_cycle.cpp  test_neg_cycle.h  test_neg_cycle_boost.cpp  test_optscaling.cpp  test_optscaling_boost.cpp  test_parametric.cpp  test_parametric_boost.cpp  test_profit.cpp  test_py2cpp.cpp  test_py2cpp.tpp  test_quasicvx.cpp  test_random_graph.h  test_xnetwork.cpp
